# item-setup-form-preflight

./: .dockerignore  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  FAILURES.md  HANDOFF.md  LICENSE  PLAN.md  README.md  fly.toml  index.html  nginx.conf  package-lock.json  package.json  portfolio_project_brief_item_setup_preflight.md  pyproject.toml  vite.config.js
case-study/: index.html
data/cinderhaven/: product_master.csv
docs/brainstorms/: 2026-06-04-item-setup-preflight-requirements.md
docs/plans/: 2026-06-04-001-feat-item-setup-preflight-plan.md
docs/solutions/architecture-patterns/: pyodide-web-worker-client-side-python-validation-2026-06-05.md
public/: sw.js
public/sample/: product_master.csv
schema-diff/: index.html
scripts/: analyze_results.py  generate_50sku_master.py
scripts/results/: costco.json  kehe.json  unfi.json  walmart.json
src/: CLAUDE.md
src/cli/: __init__.py  audit.py
src/css/: main.css
src/engine/: __init__.py  column_matcher.py  file_parser.py  models.py  orchestrator.py  schema_loader.py  validators.py
src/engine/gtin/: __init__.py  gtin_core.py
src/js/: column-matcher.js  file-parser.js  main.js  schema-differ.js  schema-loader.js  worker-api.js
src/js/components/: column-mapper.js  file-upload.js  partner-selector.js  results-display.js  (+1 more)
src/schemas/: costco.yaml  kehe.yaml  unfi.yaml  walmart.yaml
src/workers/: pyodide-worker.mjs
tests/: CLAUDE.md  test_cli.py  test_column_matcher.py  test_file_parser.py  test_gtin.py  test_models.py  test_partner_schemas.py  test_schema_loader.py  test_validators.py
