[project]
name = "item-setup-form-preflight"
version = "0.1.0"
description = "Retailer/distributor item-setup pre-flight validation engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.5,<3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.1",
    "openpyxl>=3.1",
]
dev = [
    "ruff>=0.11",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["preflight"]
